<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Safety" Id="{9ede18c0-9e8b-49e2-8d96-a4cc1a1d6e41}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//EL6910 Safety project Variables
	bSafetyErrorAck			AT %Q* : BOOL;
	bSafetyRun				AT %Q* : BOOL;
	bSafetyRestart			AT %Q* : BOOL;
	
	//Motors variables 
	//AX8000 M1 Drive Safety Error Ack and Run
	bM1STOErrorAck			AT %I* : BOOL;
	iMotorsSTOEnabled		AT %I* : BOOL;
	//AMI8000 M4-M8 VICI Valves SAfety Error Ack and Run
	bAMI8000ErrorAck		AT %Q*	: BOOL;
	bAMI8000Run				AT %Q*	: BOOL;
	
	SafetyInputs			AT %I*	: ST_SafetyInputs;
	SafetyOutputs			AT %Q*	: ST_SafetyOutputs;
	
	//Temporary
	bResetButtonVISU		AT %I*	: BOOL;
	bAckButtonVISU			AT %I*	: BOOL;
	

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>