<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_EventHandler" Id="{50d7dbe2-9dbf-4c79-9105-c09bc47664b0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventHandler
VAR_INPUT
	bExecute	: BOOL;
	eEventName	: E_Events;
	sSystem		: STRING;
	sMessage	: STRING;
END_VAR

VAR_OUTPUT
	bDone		: BOOL := FALSE;
END_VAR

VAR
	fbMessage	: FB_TcMessage;
	bSend 		: BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Raising the events for each event class
CASE eEventName OF 

	E_Events.INFO: //INFO Event
		IF bExecute THEN
			bExecute := FALSE;
			fbMessage.CreateEx(TC_EVENTS.ASRS.Info, 0);
			fbMessage.ipArguments.AddString(sSystem).AddString(sMessage);
			bSend	:= TRUE;
		END_IF
	
	E_Events.WARNING: //Warning Event
		IF bExecute THEN
				bExecute := FALSE;
				fbMessage.CreateEx(TC_EVENTS.ASRS.Warning, 0);
				fbMessage.ipArguments.AddString(sSystem).AddString(sMessage);
				bSend	:= TRUE;
			END_IF
			
	E_Events.ERROR: //Error Event
		IF bExecute THEN
			bExecute := FALSE;
			fbMessage.CreateEx(TC_EVENTS.ASRS.Error, 0);
			fbMessage.ipArguments.AddString(sSystem).AddString(sMessage);
			bSend	:= TRUE;
		END_IF
	
	E_Events.CRITICAL: //Critical Event
		IF bExecute THEN
			bExecute := FALSE;
			fbMessage.CreateEx(TC_EVENTS.ASRS.Critical, 0);
			fbMessage.ipArguments.AddString(sSystem).AddString(sMessage);
			bSend	:= TRUE;
		END_IF
	
END_CASE

//Sending the event message
IF bSend THEN
	fbMessage.Send(0);
	bDone := TRUE;
	bSend := FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_EventHandler">
      <LineId Id="26" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="44" Count="2" />
      <LineId Id="72" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="49" Count="2" />
      <LineId Id="73" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="53" Count="2" />
      <LineId Id="74" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="65" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>